<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/_10sdp"
                android:backgroundTint="@android:color/white"
                android:src="@drawable/ic_more_vert_black_24dp"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/action_settings"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/alarm_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingLeft="@dimen/_8sdp"
        android:text="@string/alarm_label"
        android:textColor="@color/yellow_color"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/sound_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_tv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/sound_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <Switch
            android:id="@+id/switch_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:checked="true"
            android:text="" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/vib_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sound_wrapper">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/vibration_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <Switch
            android:id="@+id/switch_vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:checked="true"
            android:text="" />
    </RelativeLayout>

    <View
        android:id="@+id/view_sp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/vib_wrapper"
        android:background="@color/toast_bg"
        android:visibility="visible" />

    <TextView
        android:id="@+id/refresh_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_sp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingLeft="@dimen/_8sdp"
        android:text="@string/refresh_label"
        android:textColor="@color/yellow_color"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/refresh_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/refresh_tv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/refresh_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <Switch
            android:id="@+id/switch_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:checked="false"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/refresh_time_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/refresh_wrapper">

        <TextView
            android:id="@+id/auto_refresh_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/refresh_time_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/auto_refresh_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/auto_refresh_time_label"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/refresh_time_label"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>

    <View
        android:id="@+id/view_sp2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/refresh_time_wrapper"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@color/toast_bg"
        android:visibility="visible" />

    <TextView
        android:id="@+id/list_favorite_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_sp2"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingLeft="@dimen/_8sdp"
        android:text="@string/favorite_label"
        android:textColor="@color/yellow_color"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/favorite_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_favorite_tv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/only_display_favorite_coin"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <Switch
            android:id="@+id/switch_display_favorite_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:checked="false"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/favorite_wrapper_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/favorite_wrapper">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/display_favorite_coin_first"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <Switch
            android:id="@+id/switch_display_favorite_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:checked="false"
            android:text="" />
    </RelativeLayout>
</RelativeLayout>