<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/coin_info_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_5sdp" />

        <TextView
            android:id="@+id/coin_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_toRightOf="@id/image_icon"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coin_info_wrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/last_update_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_2sdp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_9sdp" />

    <Spinner
        android:id="@+id/spinner_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/last_update_tv"
        android:layout_marginRight="@dimen/_5sdp" />

    <LinearLayout
        android:id="@+id/linear_ad_view_fragment_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view_fragment_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_ad_view_fragment_setting"
        android:layout_below="@id/spinner_money"
        android:layout_marginBottom="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_3sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary3"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/symbol_label"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/symbol_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toast_bg2"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/price_usd_label"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price_usd_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary3"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/price_btc_label"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price_btc_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toast_bg2"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/volume_day_label"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/volume_day_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary3"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/market_cab_label"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/market_cab_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toast_bg2"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/available_supply_label"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/available_supply_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary3"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/total_supply_label"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_supply_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toast_bg2"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/max_supply_label"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/max_supply_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toast_bg2"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/change_one_hour_label"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/change_one_hour_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary3"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/change_one_day_label"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/change_one_day_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toast_bg2"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/change_one_week_label"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/change_one_week_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>