<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dinostudio.coinmarketmonitor.ui.activity.HomeActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/_10sdp"
                android:backgroundTint="@android:color/white"
                android:src="@drawable/ic_more_vert_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>


    <EditText
        android:id="@+id/search_edt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_28sdp"
        android:layout_below="@id/action_bar"
        android:layout_marginBottom="@dimen/_2sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/dialog_toast_bg"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/_10sdp" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/linear_ad_view_fragment_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view_fragment_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id2" />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_ad_view_fragment_setting"
        android:layout_below="@id/search_edt"
        android:layout_marginBottom="@dimen/_3sdp"
        android:layout_marginLeft="@dimen/_3sdp"
        android:layout_marginRight="@dimen/_3sdp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/coin_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp" />

    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
